[package]
name = "opml"
version = "0.1.0"
authors = ["Kevin Liu <mail@nivekuil.com>"]
edition = "2018"
description = "Library for working with OPML 2.0"
repository = "https://github.com/nivekuil/opml"
license = "MPL-2.0"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features=["derive"]}
quick-xml = { version = "0.17.2", features=["serialize"]}
